--- a/index.html
+++ b/index.html
@@ -58,21 +58,17 @@
                 <img src="images/free-symfony-4-1174989.png" alt="Symfony Icon">
             </div>
             <div class="skill-card" data-skill="SCSS">
-                <img src="images/format.png" alt="Symfony Icon">
+                <img src="images/format.png" alt="SCSS Icon">
             </div>
             <div class="skill-card" data-skill="Bootstrap">
-                <img src="images/img.icons8.png" alt="Symfony Icon">
+                <img src="images/img.icons8.png" alt="Bootstrap Icon">
             </div>
             <div class="skill-card" data-skill="SQL">
-                <img src="images/serveur-sql.png" alt="Symfony Icon">
+                <img src="images/serveur-sql.png" alt="SQL Icon">
             </div>
             <div class="skill-card" data-skill="MongoDB">
-                <img src="images/mongodb_plain_wordmark_logo_icon_146423.webp" alt="Symfony Icon">
+                <img src="images/mongodb_plain_wordmark_logo_icon_146423.webp" alt="MongoDB Icon">
             </div>
-        </div>
-        <div id="skill-info" class="hidden">
-            <h3 id="skill-title"></h3>
-            <p id="skill-description"></p>
         </div>
     </section>     
     <section id="portfolio">
