--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <br> 
                     <strong>Compétences principales :</strong>
                     <ul>
-                        <li>Backend : Maîtrise de PHP, Symfony, et Node.js</li>
-                        <li>Frontend : Expertise en HTML, CSS, JavaScript, et frameworks tels que React et Angular</li>
-                        <li>Bases de données : Expérience avec MySQL, PostgreSQL, et MongoDB</li>
+                        <li>Backend : Maîtrise de PHP et Symfony</li>
+                        <li>Frontend : Expertise en HTML, CSS et JavaScript</li>
+                        <li>Bases de données : Expérience avec MySQL et MongoDB</li>
                         <li>Outils de développement : Git, Docker, CI/CD</li>
                     </ul>
                 </div>
